Concurrentlinkedcache modification